Fix: utility menu covered by sticky nav in header

--- a/src/css/components/header-desktop.css
+++ b/src/css/components/header-desktop.css
@@ -115,6 +115,7 @@
 
   .dropdown-menu {
     padding: 0;
+    z-index: 9999999;
   }
 
   .dropdown-divider {
